tests/core/snapshots/test-batching-group-by.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(port: 4000)
@upstream(batch: { delay: 1, headers: [], maxSize: 1000 })
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Post {
  body: String
  id: Int
  title: String
  user: User
  @http(
    url: "http://abc.com/users"
    batchKey: ["id"]
    query: [{ key: "id", value: "{{.value.userId}}" }]
  )
  userId: Int!
}

type Query {
  posts: [Post] @http(url: "http://abc.com/posts?id=1&id=11")
}

type User {
  id: Int
  name: String
}
