tests/core/snapshots/test-enable-jit.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(hostname: "0.0.0.0", port: 8000)
@upstream
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Post {
  id: Int!
  title: String!
  user: User
  @http(url: "http://jsonplaceholder.typicode.com/users/{{.value.userId}}")
  userId: Int!
}

type Query @cache(maxAge: 30000) {
  posts: [Post] @http(url: "http://jsonplaceholder.typicode.com/posts")
}

type User {
  id: Int!
  name: String!
  username: String!
}
