tests/core/snapshots/test-enum-merge.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream
@link(src: "schema_0.graphql", type: Config)
@link(src: "schema_1.graphql", type: Config) {
  query: Query
}

enum Foo {
  BAR
  BAZ
  BOOM
}

type Query {
  foo: Foo @http(url: "http://jsonplaceholder.typicode.com/foo")
}
