tests/core/snapshots/test-eval-partial.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(port: 8000)
@upstream(batch: { delay: 100, headers: [] }, httpCache: 42)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Post {
  foo: String @http(url: "http://jsonplaceholder.typicode.com/posts/foo")
  id: Int!
  user: User
  @http(url: "http://jsonplaceholder.typicode.com/users/{{.value.userId}}")
  userId: Int!
}

type Query {
  post(id: Int!): [Post]
  @http(url: "http://jsonplaceholder.typicode.com/posts/{{.args.id}}")
}

type User {
  id: Int!
}
