tests/core/snapshots/test-expr-with-mustache.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream @link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type A {
  a: Int
  b: [Int] @modify(omit: true)
  bc: BC
  @expr(
    body: {
      b: "{{.value.b}}"
      c: "{{.value.c}}"
      d: "{{.value.d.e}}"
      f: "{{.value.d}}"
      g: "{{.value.g}}"
    }
  )
  c: String @modify(omit: true)
  d: D @modify(omit: true)
  g: Boolean @modify(omit: true)
}

type BC {
  b: [Int]
  c: String
  d: Int
  f: D
  g: Boolean
}

type D {
  e: Int
}

type Query {
  a: A @expr(body: { a: 0, b: [1, 2, 3], c: "test", d: { e: 1 }, g: true })
}
